test(etl-api): introduce full application unit and integration test coverage